fix: align bottom pieces properly

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -36,12 +36,4 @@
     margin: 10px;
     position: relative;
     z-index: 1;
-  }
-  .pieces-container {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    height: 100%;
-    position: relative;
-    z-index: 1;
-  }
+}
